--- a/infra/mythical-mysfits/streaming-service-cicd.yml
+++ b/infra/mythical-mysfits/streaming-service-cicd.yml
@@ -86,6 +86,7 @@ Resources:
             ActionMode: REPLACE_ON_FAILURE
             StackName: MythicalMysfitsStreamingServiceLambdaStack
             TemplatePath: "StreamingServiceBuildArtifact::mythical-mysfits/streaming-service/transformed-streaming.yml"
+            # RoleArn: !Ref StreamingServiceDeployCfnRole
             RoleArn: !ImportValue MythicalMysfitsCoreStack:MythicalMysfitsServiceCodeBuildServiceRole
       ArtifactStore:
         Type: S3
@@ -100,7 +101,9 @@ Resources:
   #       Statement:
   #       - Effect: Allow
   #         Principal:
-  #           Service: codedeploy.amazonaws.com
+  #           Service:
+  #             - codedeploy.amazonaws.com
+  #             - cloudformation.amazonaws.com
   #         Action:
   #           - sts:AssumeRole
   #     ManagedPolicyArns:
