--- a/infra/mythical-mysfits/core.yml
+++ b/infra/mythical-mysfits/core.yml
@@ -327,6 +327,7 @@ Resources:
           Principal:
             Service:
             - codepipeline.amazonaws.com
+            - cloudformation.amazonaws.com
           Action:
           - sts:AssumeRole
       Path: "/"
