--- a/infra/mythical-mysfits/streaming-service-cicd.yml
+++ b/infra/mythical-mysfits/streaming-service-cicd.yml
@@ -85,7 +85,10 @@ Resources:
           Configuration:
             ActionMode: REPLACE_ON_FAILURE
             StackName: MythicalMysfitsStreamingServiceLambdaStack
-            TemplatePath: "StreamingServiceBuildArtifact::transformed-streaming.json"
+            TemplatePath: "StreamingServiceBuildArtifact::mythical-mysfits/streaming-service/transformed-streaming.yml"
+            RoleArn: !ImportValue MythicalMysfitsCoreStack:MythicalMysfitsServiceCodePipelineServiceRole
+            Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
       ArtifactStore:
         Type: S3
         Location: !ImportValue MythicalMysfitsCICDStack:CodeBuildArtifactsBucket
+
