--- a/infra/mythical-mysfits/core.yml
+++ b/infra/mythical-mysfits/core.yml
@@ -399,6 +399,7 @@ Resources:
           - Effect: Allow
             Action:
             - "cloudformation:ListExports"
+            - iam:Create*
             Resource: "*"
           - Effect: "Allow"
             Action:
