Corrected missing mappings

--- a/infra/mythical-mysfits/questions-service-cicd.yml
+++ b/infra/mythical-mysfits/questions-service-cicd.yml
@@ -5,6 +5,18 @@ Parameters:
   AdministratorEmailAddress:
     Type: String
     Description: The email to send alerts to for xray
+  AwsProfile:
+    Type: String
+    AllowedValues:
+    - qa
+    - prod
+
+Mappings:
+  Branch:
+    us-east-1:
+      qa: master
+      prod: release
+
 Resources:
   MysticalMysfitsQuestionsServiceCodeBuildProject:
     Type: AWS::CodeBuild::Project
@@ -55,7 +67,7 @@ Resources:
           - Name: QuestionsServiceSourceArtifact
           Configuration:
             ConnectionArn: !ImportValue GithubRepoCodeStarConnectionArn
-            BranchName: master # TODO maybe set this to release branch for prod
+            BranchName: !FindInMap [Branch, !Ref "AWS::Region", !Ref AwsProfile ]
             FullRepositoryId: comp9447-team4/soar
           RunOrder: 1
       - Name: Build
