--- a/services/buildspec.yml
+++ b/services/buildspec.yml
@@ -16,7 +16,7 @@ phases:
     # Get the artifacts bucket for lambdas
     - lambda_artifacts_bucket=$(aws cloudformation list-exports |
         jq -r '.Exports' |
-        jq -c "map(select(.Name==\"SoarCicd:LambdaArtifactsBucket\")| .Value)" |
+        jq -c "map(select(.Name==\"${AWS_PROFILE}-SoarCicd:LambdaArtifactsBucket\")| .Value)" |
         jq -r '.[0]' |
         sed 's/\//\\\//g')
     # Build Hello World
