Deployed budget alarms topic to qa

--- a/services/budget-alarms/template.yaml
+++ b/services/budget-alarms/template.yaml
@@ -11,6 +11,7 @@ Globals:
     Timeout: 3
 
 Resources:
+  # A function that forwards an SNS message to Discord
   BudgetAlarmsFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
@@ -28,15 +29,43 @@ Resources:
         SnsBudgetAlarm:
           Type: SNS
           Properties:
-            Topic: !BudgetAlarmsSnsTopic
+            Topic: !Ref BudgetAlarmsSnsTopic
 
-  BudgetAlarmSnsTopic:
-    TopicName: BudgetAlarm
+  # An SNS topic on Budget Alarms
+  BudgetAlarmsSnsTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: BudgetAlarm
+
+  # Allows aws budgets to publish to the SNS Topic
+  BudgetAlarmsTopicPolicy:
+    Type: AWS::SNS::TopicPolicy
+    Properties:
+      Topics:
+      - !Ref BudgetAlarmsSnsTopic
+      PolicyDocument:
+        Version: 2008-10-17
+        Statement:
+        - Sid: "Allow AWS Budgets to send to this topic"
+          Effect: Allow
+          Principal:
+            Service: budgets.amazonaws.com
+          Action: SNS:Publish
+          Resource: !Ref BudgetAlarmsSnsTopic
 
 Outputs:
   BudgetAlarmsFunction:
     Description: "Hello World Lambda Function ARN"
     Value: !GetAtt BudgetAlarmsFunction.Arn
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'BudgetAlarmsFunction' ] ]
   BudgetAlarmsFunctionIamRole:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt BudgetAlarmsFunctionRole.Arn
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'BudgetAlarmsFunctionIamRole' ] ]
+  BudgetAlarmsSnsTopic:
+    Description: "The SNS topic for the budget alarms"
+    Value: !Ref BudgetAlarmsSnsTopic
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'BudgetAlarmsSnsTopic' ] ]
